# Causal-Neuro-Symbolic-GraphRAG-for-Automated-Auditing

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt
docs/: 1_stack_and_config.md  2_retrieval_architecture.md  3_verification_engine.md  4_driver_scripts.md  aime_2025_formalization.json  aime_2025_formalization.md  benchmark_results_matrix.csv  curriculum_map.md  data_integrity_report.md  easy_math_results.json  easy_math_results.md  evaluation_report_v2.json  evaluation_report_v2.md  final_audit_certificate.md  final_project_report.md  gap_detection_evidence.json  gap_detection_report.md  phase_2_results.json  phase_2_results.md  phase_3_results.json  phase_3_results.md  phase_4_verification.json  phase_4_verification.md  phase_c_final_results.json  phase_c_final_results.md  pipeline_test_results.json  proofnet_validation_report.json  proofnet_validation_report.md  system_architecture_report.md  system_biopsy_report.md
mathematest/: Mathematest.lean  README.md  lake-manifest.json  lakefile.toml
scripts/: batch_ingestion.py  benchmark_grand_matrix.py  complexity_cliff_benchmark.py  deep_relationship_extractor.py  extract_relationships.py  formalize_aime_2025.py  generate_finale_plots.py  hydrate_chroma_from_graph.py  import_proofnet.py  ingest_fresh_problems.py  rehydrate_chroma_correctly.py  run_benchmark.py  run_easy_verification.py  run_experiment.py  run_phase_3_diagnostic.py  run_phase_4_bridge.py  run_phase_c_live.py  run_stress_test.py  run_textbook_audit.py  seed_knowledge_base.py  seed_misconceptions.py  stress_test_realistic.py  test_openai_connection.py  validate_proofnet.py  verify_aime_mathlib.py  verify_bridge.py
src/: __init__.py
tests/: __init__.py  (+8 more)
(+37 files in other folders)
